--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -59,6 +59,13 @@
 			$(".navbar-toggle").on('click', function() {
 				$(".sidebar").toggleClass("sidebar-open");
 			});
+
+			setTimeout(function(){
+					$(".alert").fadeOut('slow', function(){
+						$(this).alert('close');
+					});
+				}, 5000);
+			
 		});
 	</script>
 </body>
