--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -14,7 +14,7 @@
                     <p>Clique em Ok para proceder com a exclusão.&hellip;</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                    <button id="calcelar_confirm" type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
                     <button id="ok_confirm" type="button" class="btn btn-primary">Ok</button>
                 </div>
             </div>    <!-- /.modal-content -->
