--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -42,6 +42,14 @@
                 href="/funcionarios/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar </span>
             </a></li>
         </ul>
+
+        <ul class="nav nav-pills">
+            <li class="nav-item"><span class="nav-link active">Pessoas</span></li>
+            <li class="nav-item"><a class="nav-link" 
+                href="/pessoas/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar </span>
+            </a></li>
+        </ul>
+
     </nav>
 </body>
 </html>
