--- a/src/main/resources/templates/funcionario/cadastro.html
+++ b/src/main/resources/templates/funcionario/cadastro.html
@@ -26,7 +26,8 @@
 
 				<div th:replace="~{fragments/alert}"></div>
 
-	            <form th:action="@{/funcionarios/salvar}" th:object="${funcionario}" method="POST">
+	            <form th:action="${funcionario.id == null}? @{/funcionarios/salvar}: @{/funcionarios/editar}" 
+				      th:object="${funcionario}" method="POST">
 	                <div class="form-row">
 	                    <div class="form-group col-md-6">
 	                        <label for="nome">Nome do Funcionário</label>
