--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,11 +19,15 @@
 	<link href="/css/style.css" rel="stylesheet" />
 </head>
 <body>
-	<header th:replace="~{fragments/header :: cabecalho}"></header>
+	<header th:replace="~{fragments/header :: cabecalho}">
+		<div>header</div>
+	</header>
 	
 	<div class="layout-main">
 		<aside>
-			<nav th:replace="~{fragments/sidebar :: nav-sidebar}"></nav>
+			<nav th:replace="~{fragments/sidebar :: nav-sidebar}">
+				<span>menu</span>
+			</nav>
 		</aside>
 		
 		<section layout:fragment="corpo">
@@ -31,28 +35,32 @@
 		</section>
 	</div>
 	
-	<footer th:replace="~{fragments/footer :: rodape}"></footer>
+	<footer th:replace="~{fragments/footer :: rodape}">
+		<div>footer</div>
+	</footer>
 	
 	<!-- Bootstrap core JavaScript -->
 	<script src="/webjars/jquery/jquery.min.js"></script>
 	<script src="/webjars/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
 
 	<script type="text/javascript">
 		// Variável para armazenar a URL de navegação
 		var url = '';
 
 		// Evento de clique em botões com id que contém "btn_"
-		$(document).on('click', 'button[id*="btn_"]', function() {
-			// Extrai o id do botão e cria a URL
+		$('button[id*="btn_"]').click(function() {
 			url = "http://localhost:8080/" + $(this).attr('id').split("_")[1];
-			$('#myModal').modal('show');
 		});
 
 		// Confirma e navega para a URL definida ao clicar em #ok_confirm
 		$('#ok_confirm').on('click', function() {
 			window.location.href = url;
+		});
+
+		$(function() {
+			$('[data-toggle="popover"]').popover();
 		});
 
 		$('#cancelar_confirm').on('click', function() {
@@ -61,10 +69,7 @@
 
 		// Controla a exibição da sidebar
 		$(document).ready(function() {
-			$(function() {
-				$('[data-toggle="popover"]').popover();
-			});
-
+			
 			// Toggle da sidebar
 			$(".navbar-toggle").on('click', function() {
 				$(".sidebar").toggleClass("sidebar-open");
@@ -74,8 +79,6 @@
 			setTimeout(function(){
 				$(".alert").fadeOut('slow');
 			}, 5000);
-
-			
 		});
 
 	</script>
