--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -17,6 +17,8 @@
 	
 	<!-- Custom styles for this template -->
 	<link href="/css/style.css" rel="stylesheet" />
+	<link href="/datatables/datatables.css" rel="stylesheet" />
+
 </head>
 <body>
 	<header th:replace="~{fragments/header :: cabecalho}">
@@ -44,6 +46,7 @@
 	<script src="/webjars/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+	<script src="/datatables/datatables.min.js"></script>
 
 	<script type="text/javascript">
 		// Variável para armazenar a URL de navegação
