--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -46,7 +46,7 @@
         <ul class="nav nav-pills">
             <li class="nav-item"><span class="nav-link active">Pessoas</span></li>
             <li class="nav-item"><a class="nav-link" 
-                href="/pessoas/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar </span>
+                href="/pessoas/pre_listar"> <i class="oi oi-spreadsheet"></i> <span>Listar </span>
             </a></li>
         </ul>
 
