--- a/src/main/resources/templates/pessoa/lista.html
+++ b/src/main/resources/templates/pessoa/lista.html
@@ -24,6 +24,7 @@
 	                    <tr>
 	                        <th>#</th>
 	                        <th>Nome</th>
+	                        <th>CPF</th>
 	                        <th>E-mail</th>
 	                    </tr>
 	                    </thead>
@@ -31,6 +32,7 @@
 	                    <tr th:each = "p : ${pessoas}">
 	                        <td th:text="${p.codigo}">1</td>
 	                        <td th:text="${p.nome}">Auxiliar Contábil</td>
+	                        <td th:text="${p.cpfFormatado}">099.999.999-99</td>
 	                        <td th:text="${p.email}">Contabilidade</td>
 	                        <td colspan="2">
 	                            <a class="btn btn-info btn-sm" href="#" role="button">
