--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -12,12 +12,20 @@
 	<link rel="icon" href="/image/favicon.png" />
 
 	<!-- Bootstrap core CSS -->
-	<link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="/webjars/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+    <link href="/fontawesome4/css/font-awesome.min.css" rel="stylesheet" />
+
 	
 	<!-- Custom styles for this template -->
 	<link href="/css/style.css" rel="stylesheet" />
 	<link href="/datatables/datatables.css" rel="stylesheet" />
+	<!-- Bootstrap core JavaScript -->
+	<script src="/js/jquery.js"></script>
+	<script src="/js/jquery.mask.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="/bootstrap/js/bootstrap.min.js"></script>
+	<script src="/datatables/datatables.min.js"></script>
 
 </head>
 <body>
@@ -41,13 +49,6 @@
 		<div>footer</div>
 	</footer>
 	
-	<!-- Bootstrap core JavaScript -->
-	<script src="/webjars/jquery/jquery.min.js"></script>
-	<script src="/webjars/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-	<script src="/datatables/datatables.min.js"></script>
-
 	<script type="text/javascript">
 		// Variável para armazenar a URL de navegação
 		var url = '';
