--- a/src/main/resources/templates/pessoa/listaJson.html
+++ b/src/main/resources/templates/pessoa/listaJson.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html layout:decorate="~{layout}">
 <head>
+	<style>
+		.nowrap {
+      		white-space: nowrap;
+  		}
+	</style>
     <meta charset="UTF-8"/>
 	<link href="/css/style.css" rel="stylesheet" />
 	<link href="/datatables/datatables.css" rel="stylesheet" />
@@ -12,35 +17,55 @@
 			processing: true,
 			serverSide: true,
 			responsive: true,
-			// "bSort": false,
-			"aaSorting": [[1, 'asc']],
+			searching: false,
+			//"bSort": false,
+			//"aaSorting": [[0, 'asc']],
 			"pageLength": 10,
 			"language": {
 				"decimal": "",
 				"emptyTable": "Não há dados disponíveis",
 				"info": "_START_ até _END_ de _TOTAL_ registos",
 				"infoEmpty": "Mostrando de 0 até 0 de 0 registos",
-				"infoFiltered": "(filtrado em _MAX_ registos no total)",
+				"infoFiltered": "(filtrado de _MAX_ registos no total)",
 				"infoPostFix": "",
-				"thousands": ",",
+				"thousands": ".",
 				"lengthMenu": "Mostrar _MENU_ registos",
-				"loadingRecords": "A carregar dados...",
+				"loadingRecords": "Carregando os dados...",
 				"processing": "Processando...",
 				"search": "Procurar:",
 				"zeroRecords": "Não foram encontrados resultados",            
 				"aria": {
 					"sortAscending": ": ordem crescente",
 					"sortDescending": ": ordem decrescente"
+				},
+				"oPaginate": {
+					"sFirst":    "<<",
+					"sPrevious": "<",
+					"sNext":     ">",
+					"sLast":     ">>"
 				}
 			},
 			"columnDefs": [
-				{
-					"targets": [0, 1],          // coluna número
+ 				{ 'orderable': false, 'targets': [ 4, 5 ] },
+ 				{
+					"targets": [1],        // coluna número
 					"className": "nowrap"  // Adiciona a classe nowrap
 				}
 			]
 		});
 	});
+	</script>
+	<script th:inline="none">
+		function detalharPessoa() {
+			// Pega todos os checkboxes marcados
+			const selecionados = document.querySelectorAll("input[name='listaPessoasSelecionadas']:checked");
+			if (selecionados.length === 0) {
+				alert("Selecione pelo menos uma pessoa.");
+				return;
+			}
+			const codigo = selecionados[0].value;
+			window.location.href = "/pessoas/detalhar_pessoa?codigo=" + codigo;
+		}
 	</script>
 </head>
 <body>
@@ -61,20 +86,32 @@
 	            <div class="table-responsive">
 	                <table id="tabela_pessoas" class="table table-striped table-hover table-sm">
 	                    <thead>
+						<tr>
+							<th colspan="6" style="text-align: right;">
+								<a href="#" onclick="return detalharPessoa()" 
+									onMouseover="window.status=''; return true;" onMouseout="window.status=''; return true;" onFocus="window.status=''; return true;" onBlur="window.status=''; return true;">
+									Processos de que participo
+								</a> 
+							</th>
+						</tr>
 	                    <tr>
-	                        <th>#</th>
 	                        <th>Nome</th>
 	                        <th>CPF</th>
-	                        <th>E-mail</th>
+							<th>Vínculo Institucional</th>
+							<th>Departamento</th>
+							<th>Subárea</th>
+							<th></th>
 	                    </tr>
 	                    </thead>
 	                </table>
+					<br>
+					<br>
+					<br>
 	            </div>
 	        </div>
 	        
 			<div th:replace="~{fragments/modal :: modal }"></div>
 			
 	    </section>
-
 </body>
 </html>		
