--- a/src/main/resources/templates/pessoa/listaJson.html
+++ b/src/main/resources/templates/pessoa/listaJson.html
@@ -31,7 +31,9 @@
 				"thousands": ".",
 				"lengthMenu": "Mostrar _MENU_ registos",
 				"loadingRecords": "Carregando os dados...",
-				"processing": "Processando...",
+				"processing": "<span class='fa-stack fa-lg'>\n\
+                            <i class='fa fa-spinner fa-spin fa-stack-2x fa-fw'></i>\n\
+                       		</span>&emsp;Processando...",
 				"search": "Procurar:",
 				"zeroRecords": "Não foram encontrados resultados",            
 				"aria": {
@@ -69,49 +71,50 @@
 	</script>
 </head>
 <body>
-	    <section class="layout-content" layout:fragment="corpo">
-	
-	        <nav class="navbar navbar-expand-md bg-light">
-	            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-	                <ul class="navbar-nav mr-auto">
-	                    <li class="nav-item active">
-	                        <i class="oi oi-caret-right"></i>
-	                        <span>Lista de Pessoas</span>
-	                    </li>
-	                </ul>
-	            </div>
-	        </nav>
-	
-	        <div class="container" id="listagem">
-	            <div class="table-responsive">
-	                <table id="tabela_pessoas" class="table table-striped table-hover table-sm">
-	                    <thead>
-						<tr>
-							<th colspan="6" style="text-align: right;">
-								<a href="#" onclick="return detalharPessoa()" 
-									onMouseover="window.status=''; return true;" onMouseout="window.status=''; return true;" onFocus="window.status=''; return true;" onBlur="window.status=''; return true;">
-									Processos de que participo
-								</a> 
-							</th>
-						</tr>
-	                    <tr>
-	                        <th>Nome</th>
-	                        <th>CPF</th>
-							<th>Vínculo Institucional</th>
-							<th>Departamento</th>
-							<th>Subárea</th>
-							<th></th>
-	                    </tr>
-	                    </thead>
-	                </table>
-					<br>
-					<br>
-					<br>
-	            </div>
-	        </div>
-	        
-			<div th:replace="~{fragments/modal :: modal }"></div>
-			
-	    </section>
+	<section class="layout-content" layout:fragment="corpo">
+
+		<nav class="navbar navbar-expand-md bg-light">
+			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<i class="oi oi-caret-right"></i>
+						<span>Lista de Pessoas</span>
+					</li>
+				</ul>
+			</div>
+			<a class="btn btn-primary btn-md" href="/pessoas/editar_pesquisa" role="button"> 
+				<span  class="fa fa-search fa-lg"title="Cadastro" aria-hidden="true"></span>
+			</a>
+		</nav>
+
+		<div class="container" id="listagem">
+			<div class="table-responsive">
+				<table id="tabela_pessoas" class="table table-striped table-hover table-sm">
+					<thead>
+					<tr>
+						<th colspan="6" style="text-align: right;">
+							<a href="#" onclick="return detalharPessoa()" 
+								onMouseover="window.status=''; return true;" onMouseout="window.status=''; return true;" onFocus="window.status=''; return true;" onBlur="window.status=''; return true;">
+								Processos de que participo
+							</a> 
+						</th>
+					</tr>
+					<tr>
+						<th>Nome</th>
+						<th>CPF</th>
+						<th>Vínculo Institucional</th>
+						<th>Departamento</th>
+						<th>Subárea</th>
+						<th></th>
+					</tr>
+					</thead>
+				</table>
+				<br>
+				<br>
+				<br>
+			</div>
+		</div>	        
+		<div th:replace="~{fragments/modal :: modal }"></div>			
+	</section>
 </body>
 </html>		
