--- a/src/main/resources/templates/pessoa/pesquisa.html
+++ b/src/main/resources/templates/pessoa/pesquisa.html
@@ -37,6 +37,17 @@
                 });                
             });
         });
+
+        function limparFormulario() {
+            const form = $('#pesquisar form')[0];
+            form.reset();                         
+            $(form).find('.is-invalid, .is-valid').removeClass('is-invalid is-valid');
+            $(form).find('input, textarea').val('');
+                form.querySelectorAll('input, select, textarea').forEach(el => {
+                el.setCustomValidity('');
+            });
+            $('#nome').focus();
+        }
     </script>
 </head>
 <body>
@@ -148,7 +159,7 @@
                 </div>
 
                 <div class="d-flex justify-content-between mt-2">
-					<button type="reset" onclick="$('#cpf').removeClass('is-invalid is-valid');" class="btn btn-secondary btn-sm">Limpar</button>
+					<button type="button" class="btn btn-secondary btn-sm" onclick="limparFormulario()">Limpar</button>
 					<button type="submit" class="btn btn-primary btn-sm">Buscar</button>
 				</div>
             </form>
