--- a/src/main/resources/templates/pessoa/dadosPessoa.html
+++ b/src/main/resources/templates/pessoa/dadosPessoa.html
@@ -56,7 +56,7 @@
             <!-- Endereço -->
             <div class="card mb-3 shadow-sm">
                 <div class="card-header bg-secondary text-white">
-                    Endereço
+                    Endereço no Brasil
                 </div>
                 <div class="card-body row">
                     <div class="col-md-6 mb-3">
@@ -78,6 +78,10 @@
                     <div class="col-md-2 mb-3">
                         <label class="form-label fw-bold">UF:</label>
                         <div th:text="${pessoa.estado}"></div>
+                    </div>
+                    <div class="col-md-12 mb-3" th:if="${pessoa.enderecoInternacional != null and not #strings.isEmpty(pessoa.enderecoInternacional)}">
+                        <label class="form-label fw-bold">Endereco no Exterior:</label>
+                        <div th:text="${pessoa.enderecoInternacional}"></div>
                     </div>
                 </div>
             </div>
