--- a/src/main/resources/templates/pessoa/listaJson.html
+++ b/src/main/resources/templates/pessoa/listaJson.html
@@ -103,7 +103,7 @@
 						<th colspan="6" style="text-align: right;">
 							<a href="#" onclick="return detalharPessoa()" 
 								onMouseover="window.status=''; return true;" onMouseout="window.status=''; return true;" onFocus="window.status=''; return true;" onBlur="window.status=''; return true;">
-								Processos de que participo
+								<i class="fa fa-list-alt fa-lg" aria-hidden="true">&nbsp; Processos de que participo</i>
 							</a> 
 						</th>
 					</tr>
